--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: ruby
-rvm: 2.3.1
+rvm: 2.6.1
+branches:
+  only: master
+before_install:
+- gem update --system
+- gem install bundler
 cache: bundler
 script:
 - bundle exec rake
