--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,11 @@
+inherit_gem:
+  syntax_tree: config/rubocop.yml
+
 AllCops:
   DisplayCopNames: true
   DisplayStyleGuide: true
+  NewCops: enable
+  SuggestExtensions: false
   TargetRubyVersion: 2.7
   Exclude:
   - '{tmp,vendor,yard}/**/*'
@@ -12,6 +17,9 @@ Layout/LineLength:
   Max: 80
 
 Lint/AmbiguousBlockAssociation:
+  Enabled: false
+
+Metrics:
   Enabled: false
 
 Naming/RescuedExceptionsVariableName:
